Fix direct access to a subfile in the %rom% file system by reusable stream. Bug 689976, customers 661, 580.

DETAILS:
1. Open the source file of the reusable stream as a general stream,
   rather than an os-based file stream.
2. Take into account file_offset member when accessing the stream.

DIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8878 a1074d23-0009-0410-80fe-cf8c14f379e6